Fix menu z-index

--- a/assets/scss/layout/_menu.scss
+++ b/assets/scss/layout/_menu.scss
@@ -52,6 +52,7 @@ header#topbar {
             right: 0;
             bottom: 0;
             left: 0;
+            z-index: 2;
             background-color: rgba(247, 247, 247, 0.8);
             gap: utilities.space(12);
             
